Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Not recommended for production applications, as it will not pass certification.<
 <h3>
 <a id="read-a-person" class="anchor" href="#read-a-person" aria-hidden="true"><span class="octicon octicon-link"></span></a>Read a person</h3>
 
-<div class="highlight highlight-Python"><pre><span class="pl-k">&gt;&gt;&gt;</span> fs.get_person(PPPJ<span class="pl-k">-</span>MYZ)
+<div class="highlight highlight-Python"><pre><span class="pl-k">&gt;&gt;&gt;</span> fs.get_person(<span class="pl-s1"><span class="pl-pds">"</span>PPPJ-MYZ<span class="pl-pds">"</span></span>)
 {
   <span class="pl-s1"><span class="pl-pds">"</span>persons<span class="pl-pds">"</span></span> : [ {
     <span class="pl-s1"><span class="pl-pds">"</span>id<span class="pl-pds">"</span></span> : <span class="pl-s1"><span class="pl-pds">"</span>PPPJ-MYZ<span class="pl-pds">"</span></span>,
